# ProyectoFinal_TLF

./: .gitignore  README.md  pyproject.toml
.atl/: skill-registry.md
.github/workflows/: release.yml  test.yml
.opencode/plans/: endurecimiento-automatas.md
docs/: Búsqueda y Validación de Patrones en Textos y Sistemas Interactivos.docx  Búsqueda y Validación de Patrones en Textos y Sistemas Interactivos.md  Descripción formal de los autómatas.docx  Descripción formal de los autómatas.md  Reglas Formales.docx  Reglas Formales.md  Tests del Proyecto.docx  Tests del Proyecto.md  branching.md  explanation.md  final-report.md  formal-rules.md  implementation-plan.md  project-scope.md  project-structure.md  test-cases.md
openspec/: config.yaml
openspec/changes/plan-inicial-proyecto-tlf/: design.md  proposal.md  tasks.md
openspec/changes/plan-inicial-proyecto-tlf/specs/project-plan/: spec.md
openspec/specs/: README.md
src/: __init__.py  main.py
src/core/: __init__.py  automaton.py  result.py  symbol_classifier.py
src/patterns/: __init__.py  date_validator.py  email_validator.py  nit_validator.py  password_validator.py  phone_validator.py  plate_validator.py  text_scanner.py  url_validator.py
src/ui/: __init__.py  app.py  automaton_graph.py  forms.py  messages.py  widgets.py
tests/: test_date_validator.py  test_email_validator.py  test_nit_validator.py  test_password_validator.py  test_phone_validator.py  test_plate_validator.py  test_text_scanner.py  test_url_validator.py
