[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tlf"
version = "1.1.1"
description = "Busqueda y validacion de patrones con automatas finitos deterministas"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["tlf", "automata", "finite-automata", "pattern-matching"]

authors = [
    {name = "TLF Project", email = "tlf@uniquindio.edu.co"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
build = ["pyinstaller>=6"]

[project.scripts]
tlf = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
